--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,14 +11,14 @@
 
 @font-face {
   font-family: 'Orbitron';
-  src: url('/font/Orbitron-Bold.ttf') format('truetype');
+  src: url('/front/Orbitron-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'JetBrainsMono';
-  src: url('/font/JetBrainsMono-Regular.ttf') format('truetype');
+  src: url('/front/JetBrainsMono-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
